--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --exec babel-node -- ./index.js"
+    "start": "nodemon --exec babel-node -- ./index.js",
+    "dev":"babel-node -- ./index.js"
   },
   "keywords": [],
   "author": "",
