--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,21 +1,21 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "fwee",
+  "name": "Free World Exchange Experience",
   "icons": [
     {
       "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
+      "sizes": "64x64 48x48 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "android-chrome-72x72.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "72x72"
     },
     {
-      "src": "logo512.png",
+      "src": "fweemobile.png",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes":"any"
     }
   ],
   "start_url": ".",
