--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon --exec babel-node -- ./index.js",
-    "dev":"babel-node -- ./index.js"
+    "dev": "babel-node -- ./index.js"
   },
   "keywords": [],
   "author": "",
@@ -17,8 +17,10 @@
     "@babel/node": "^7.14.2",
     "@babel/preset-env": "^7.14.2",
     "apollo-server": "^2.24.0",
+    "express": "^4.17.2",
     "firebase-admin": "^9.7.0",
     "graphql": "^15.5.0",
+    "gun": "^0.2020.1235",
     "nodemon": "^2.0.7"
   }
 }
