--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^9.6.1",
+    "gun": "^0.2020.1235",
     "luxon": "^2.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
