--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "crypto-js": "^4.1.1",
     "firebase": "^9.6.1",
     "gun": "^0.2020.1235",
     "luxon": "^2.2.0",
