--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "env": "export NODE_OPTIONS=--openssl-legacy-provider",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
