--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "@peculiar/webcrypto": "^1.2.3",
     "@react-three/fiber": "^7.0.24",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
