--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -8,7 +8,7 @@ name: Deploy to Firebase Hosting on merge
       - main
 env:
   CI: false
-  TRANSACTION_SYSTEM_API_KEY: ${{secrets.TRANSACTION_SYSTEM_API_KEY}}
+  TRANSACTION_SYSTEM_API_KEY: '${{secrets.TRANSACTION_SYSTEM_API_KEY}}'
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
