--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -5,7 +5,7 @@ name: Deploy to Firebase Hosting on PR
 'on': pull_request
 env:
   CI: false
-  TRANSACTION_SYSTEM_API_KEY: '${{secrets.TRANSACTION_SYSTEM_API_KEY}}'
+  REACT_APP_TRANSACTION_SYSTEM_API_KEY: ${{ secrets.TRANSACTION_SYSTEM_API_KEY }}
 jobs:
   build_and_preview:
     if: '${{ github.event.pull_request.head.repo.full_name == github.repository }}'
@@ -19,3 +19,6 @@ jobs:
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_TIME_73ED0 }}'
           projectId: time-73ed0
           entryPoint: "./client"
+        env:
+          REACT_APP_TRANSACTION_SYSTEM_API_KEY: ${{ secrets.TRANSACTION_SYSTEM_API_KEY }}
+
