--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v2
       - run: cd client ; npm ci ; npm run build
         env:
-          REACT_APP_TRANSACTION_SYSTEM_API_KEY: ${{ secrets.TRANSACTION_SYSTEM_API_KEY }}
+          REACT_APP_TRANSACTION_SYSTEM_API_KEY: '${{ secrets.TRANSACTION_SYSTEM_API_KEY }}'
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
