--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^4.0.1",
+    "react-loading": "^2.0.3",
     "react-router-dom": "^6.1.1",
     "react-scripts": "5.0.0",
     "three": "^0.135.0",
