--- a/client/package.json
+++ b/client/package.json
@@ -17,10 +17,12 @@
     "gun": "^0.2020.1235",
     "luxon": "^2.2.0",
     "react": "^17.0.2",
+    "react-awesome-reveal": "^3.8.1",
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^4.0.1",
     "react-loading": "^2.0.3",
     "react-router-dom": "^6.1.1",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.0",
     "three": "^0.135.0",
     "web-vitals": "^2.1.2",
