--- a/client/package.json
+++ b/client/package.json
@@ -3,17 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.8.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "@mui/material": "^5.4.3",
     "@peculiar/webcrypto": "^1.2.3",
     "@react-three/fiber": "^7.0.24",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "crypto-js": "^4.1.1",
-    "firebase": "^9.6.1",
+    "firebase": "^9.6.7",
     "gun": "^0.2020.1235",
     "luxon": "^2.2.0",
     "react": "^17.0.2",
