--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "^6.1.1",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.0",
+    "react-share": "^4.4.0",
     "three": "^0.135.0",
     "web-vitals": "^2.1.2",
     "workbox-background-sync": "^6.4.2",
