--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "luxon": "^2.2.0",
     "react": "^17.0.2",
     "react-awesome-reveal": "^3.8.1",
+    "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^4.0.1",
     "react-loading": "^2.0.3",
