--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: cd client ; npm ci ; npm run build
+      - run: cd client ; npm install ; npm run build
         env:
           REACT_APP_TRANSACTION_SYSTEM_API_KEY: '${{ secrets.TRANSACTION_SYSTEM_API_KEY }}'
       - uses: FirebaseExtended/action-hosting-deploy@v0
