--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "7.21.11",
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
@@ -28,7 +29,7 @@
     "react-loading": "^2.0.3",
     "react-router-dom": "^6.1.1",
     "react-router-hash-link": "^2.4.3",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.1",
     "react-share": "^4.4.0",
     "three": "^0.135.0",
     "web-vitals": "^2.1.2",
