--- a/server/package.json
+++ b/server/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --exec babel-node -- ./index.js",
-    "dev": "babel-node -- ./index.js"
+    "start": "nodemon ./index.js",
+    "dev": "nodemon ./index.js"
   },
+  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -18,7 +19,7 @@
     "@babel/preset-env": "^7.14.2",
     "apollo-server": "^2.24.0",
     "express": "^4.17.2",
-    "firebase-admin": "^9.7.0",
+    "firebase-admin": "^12.1.1",
     "graphql": "^15.5.0",
     "gun": "^0.2020.1235",
     "nodemon": "^2.0.7"
